--- a/UI/NodeDialog.ui
+++ b/UI/NodeDialog.ui
@@ -41,7 +41,11 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QSpinBox" name="spinNumInputs"/>
+      <widget class="QSpinBox" name="spinNumInputs">
+       <property name="maximum">
+        <number>10</number>
+       </property>
+      </widget>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="label_3">
@@ -51,7 +55,11 @@
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QSpinBox" name="spinNumOutputs"/>
+      <widget class="QSpinBox" name="spinNumOutputs">
+       <property name="maximum">
+        <number>10</number>
+       </property>
+      </widget>
      </item>
      <item row="3" column="1">
       <widget class="QLabel" name="label_4">
